# tflitec_cmake_package

./: README.md  tflitec-config.cmake
.github/workflows/: windows.yml
examples/: CMakeLists.txt  README.md  main.c
examples/models/: cnn_113_80_quantized.tflite  cnn_227_160_quantized.tflite
lib/x64/Release/: tensorflowlite_c.lib
lib/x86/Release/: tensorflowlite_c.lib
